# OrangeBenchmark

./: .gitignore  AGENT_INSTRUCTIONS.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
problems/_template/: problem.yaml  scoring.py  solution.py
problems/bash-backup-rotation/: problem.yaml
problems/bash-csv-merger/: problem.yaml  scoring.py
problems/bash-file-renamer/: problem.yaml  scoring.py  solution.sh
problems/bash-log-summary/: problem.yaml
problems/bash-process-monitor/: problem.yaml  scoring.py
problems/csv-stats/: problem.yaml  scoring.py  solution.py
problems/dotnet-adsb-decoder/: AdsbDecoder.cs  AdsbDecoderTest.cs  problem.yaml  scoring.py
problems/dotnet-crew-scheduler/: CrewScheduler.cs  CrewSchedulerTest.cs  problem.yaml  scoring.py
problems/dotnet-fizz-buzz/: FizzBuzz.cs  FizzBuzzTest.cs  dotnet-fizz-buzz.csproj  problem.yaml  scoring.py
problems/dotnet-json-transform/: JsonTransformer.cs  JsonTransformerTest.cs  problem.yaml  scoring.py
problems/dotnet-palindrome-checker/: PalindromeChecker.cs  PalindromeCheckerTest.cs  problem.yaml  scoring.py
problems/dotnet-rate-limiter/: RateLimiter.cs  RateLimiterTest.cs  problem.yaml  scoring.py
problems/dotnet-reverse-string/: StringReverser.cs  problem.yaml  (+2 more)
runner/: agent_wrapper.py  executor.py  main.py  reporter.py  scorer.py  tracer.py
tests/: test_agent_wrapper.py  test_behavior_scoring.py  test_executor_prepare_work_dir.py  test_main.py  test_problem_set_integrity.py  test_reporter.py  test_scorer.py  test_tracer.py
(+223 files in other folders)
