[project]
name = "orange-benchmark"
version = "0.1.0"
description = "A benchmarking framework for evaluating LLMs and Coding Agents on code tasks"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
orangebench = "runner.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runner"]

[tool.uv]
package = true
